gcc/testsuite/gdc.test/fail_compilation/fail8009.d
void filter(R)(scope bool delegate(ref BAD!R) func) { }
void main() { filter(r => r); }

